--- a/app/assets/stylesheets/size-largest.css
+++ b/app/assets/stylesheets/size-largest.css
@@ -207,6 +207,7 @@
     width: 320px;
     height: 50px;
     margin: 0 auto;
+    margin-top: 5px;
   }
   #newgamepage {
     margin-top: 80px;
@@ -250,10 +251,25 @@
     margin-top: 4px;
     margin-left: -6px;
     padding-top: 4px;
-    padding-bottom: 6px;
+    padding-bottom: 4px;
     border-radius: 6px;
   }
   .answerfield {
     width: 80%;
+  }
+  #voterounds {
+    width: 60%;
+    margin: 0 auto;
+    text-align: center;
+  }
+  .voteroundbutton {
+    width: 300px;
+    margin: 0 auto;
+  }
+  .votearea {
+    background-color: white;
+    border-size: 2px;
+    border-style: solid;
+    border-color: gray;
   }
 }
