--- a/app/assets/stylesheets/size-smallest.css
+++ b/app/assets/stylesheets/size-smallest.css
@@ -272,4 +272,9 @@
     border-style: solid;
     border-color: gray;
   }
+  #votebutton1div, #votebutton2div, #votebutton3div, #votebutton4div {
+    float: left;
+    margin-left: 10%;
+    margin-right:12px;
+  }
 }
