--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -122,10 +122,51 @@
     <div class="votearea" id="r1vote">
       <div class="roundtitle">Round 1</div>
       <% @gameanswers.shuffle.each do |answer| %>
-        <%= Obscenity.replacement(:stars).sanitize(answer.r1answer) %>
+        <div id="votebutton1div">
+        <%= button_to "Vote", {:controller => "gamedata", :action => "vote", :id => answer.id, :method => "post", :round => "round1", :game_id => @game.id, :r1voted => true}, :class => "votebuttons", :style => "position:relative;", remote: true %>
+      </div>
+        "<%= Obscenity.replacement(:stars).sanitize(answer.r1answer) %>"
+        <br>
       <% end %><br>
       Your acro: "<%= Obscenity.replacement(:stars).sanitize(@gamedata.r1answer) %>"
     </div>
+
+    <div class="votearea" id="r2vote">
+      <div class="roundtitle">Round 2</div>
+      <% @gameanswers.shuffle.each do |answer| %>
+        <div id="votebutton2div">
+        <%= button_to "Vote", {:controller => "gamedata", :action => "vote", :id => answer.id, :method => "post", :round => "round2", :game_id => @game.id, :r2voted => true}, :class => "votebuttons", :style => "position:relative;", remote: true %>
+      </div>
+        "<%= Obscenity.replacement(:stars).sanitize(answer.r2answer) %>"
+        <br>
+      <% end %><br>
+      Your acro: "<%= Obscenity.replacement(:stars).sanitize(@gamedata.r2answer) %>"
+    </div>
+
+    <div class="votearea" id="r3vote">
+      <div class="roundtitle">Round 3</div>
+      <% @gameanswers.shuffle.each do |answer| %>
+        <div id="votebutton3div">
+        <%= button_to "Vote", {:controller => "gamedata", :action => "vote", :id => answer.id, :method => "post", :round => "round3", :game_id => @game.id, :r3voted => true}, :class => "votebuttons", :style => "position:relative;", remote: true %>
+      </div>
+        "<%= Obscenity.replacement(:stars).sanitize(answer.r3answer) %>"
+        <br>
+      <% end %><br>
+      Your acro: "<%= Obscenity.replacement(:stars).sanitize(@gamedata.r3answer) %>"
+    </div>
+
+    <div class="votearea" id="r4vote">
+      <div class="roundtitle">Round 4</div>
+      <% @gameanswers.shuffle.each do |answer| %>
+        <div id="votebutton4div">
+        <%= button_to "Vote", {:controller => "gamedata", :action => "vote", :id => answer.id, :method => "post", :round => "round4", :game_id => @game.id, :r4voted => true}, :class => "votebuttons", :style => "position:relative;", remote: true %>
+      </div>
+        "<%= Obscenity.replacement(:stars).sanitize(answer.r4answer) %>"
+        <br>
+      <% end %><br>
+      Your acro: "<%= Obscenity.replacement(:stars).sanitize(@gamedata.r4answer) %>"
+    </div>
+
   </div>
 <% end %>
 
