--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -3,232 +3,23 @@
 
 <!-- //////////////// GAME PLAY ROUNDS //////////////// -->
 <% if DateTime.now.utc < @game.playendtime %>
-  <div id="playrounds">
-    <div class="playroundbutton">
-      <%= button_tag "Play Round 1", :id => "r1playbutton" %>
-      <%= button_tag "Play Round 2", :id => "r2playbutton" %>
-      <%= button_tag "Play Round 3", :id => "r3playbutton" %>
-      <%= button_tag "Play Round 4", :id => "r4playbutton" %>
-    </div>
-
-    <div class="playarea" id="r1play">
-      <div class="roundtitle">Round 1</div>
-      Category: <span class="gamecategories"><%= @game.r1cat %></span>
-      <div class="gameletters" id="round1letters"><%= @game.r1letters %></div>
-      <div>
-        <%= form_for @gamedata, :url => updateanswer_gamedata_path, :html => {:method => :post, :id => "r1answerform"}, remote: true do |f| %>
-          <div>
-            <%= f.hidden_field :game_id, :value => @game.id %>
-            <span><%= f.text_field :r1answer, :class => "answerfield", :id => "r1answerfield", :placeholder => "Enter or change Round 1 acro here...", :autofocus => true %></span>
-            <span id="r1answer"><%= f.submit "Play", :class => "button answersubmitbutton" %>
-            </span>
-          </div>
-        <% end %>
-      </div>
-      <div id="r1answered">
-        <% if @currentgamedata.r1answer == nil %>
-          Your acro: No acro yet...
-        <% else %>
-          Your acro: "<%= @currentgamedata.r1answer %>"
-        <% end %>
-      </div>
-      <%= render "shared/gamead" %>
-    </div>
-
-    <div class="playarea" id="r2play">
-      <div class="roundtitle">Round 2</div>
-      Category: <span class="gamecategories"><%= @game.r2cat %></span>
-      <div class="gameletters" id="round2letters"><%= @game.r2letters %></div>
-      <div>
-        <%= form_for @gamedata, :url => updateanswer_gamedata_path, :html => {:method => :post, :id => "r2answerform"}, remote: true do |g| %>
-          <div>
-            <%= g.hidden_field :game_id, :value => @game.id %>
-            <span><%= g.text_field :r2answer, :class => "answerfield", :id => "r2answerfield", :placeholder => "Enter or change Round 2 acro here...", :autofocus => true %></span>
-            <span id="r2answer"><%= g.submit "Play", :class => "button answersubmitbutton" %>
-            </span>
-          </div>
-        <% end %>
-      </div>
-      <div id="r2answered">
-        <% if @currentgamedata.r2answer == nil %>
-          Your acro: No acro yet...
-        <% else %>
-          Your acro: "<%= @currentgamedata.r2answer %>"
-        <% end %>
-      </div>
-      <%= render "shared/gamead" %>
-    </div>
-
-    <div class="playarea" id="r3play">
-      <div class="roundtitle">Round 3</div>
-      Category: <span class="gamecategories"><%= @game.r3cat %></span>
-      <div class="gameletters" id="round3letters"><%= @game.r3letters %></div>
-      <div>
-        <%= form_for @gamedata, :url => updateanswer_gamedata_path, :html => {:method => :post, :id => "r3answerform"}, remote: true do |h| %>
-          <div>
-            <%= h.hidden_field :game_id, :value => @game.id %>
-            <span><%= h.text_field :r3answer, :class => "answerfield", :id => "r3answerfield", :placeholder => "Enter or change Round 3 acro here...", :autofocus => true %></span>
-            <span id="r3answer"><%= h.submit "Play", :class => "button answersubmitbutton" %>
-            </span>
-          </div>
-        <% end %>
-      </div>
-      <div id="r3answered">
-        <% if @currentgamedata.r3answer == nil %>
-          Your acro: No acro yet...
-        <% else %>
-          Your acro: "<%= @currentgamedata.r3answer %>"
-        <% end %>
-      </div>
-      <%= render "shared/gamead" %>
-    </div>
-
-    <div class="playarea" id="r4play">
-      <div class="roundtitle">Round 4</div>
-      Category: <span class="gamecategories"><%= @game.r4cat %></span>
-      <div class="gameletters" id="round4letters"><%= @game.r4letters %></div>
-      <div>
-        <%= form_for @gamedata, :url => updateanswer_gamedata_path, :html => {:method => :post, :id => "r4answerform"}, remote: true do |i| %>
-          <div>
-            <%= i.hidden_field :game_id, :value => @game.id %>
-            <span><%= i.text_field :r4answer, :class => "answerfield", :id => "r4answerfield", :placeholder => "Enter or change Round 4 acro here...", :autofocus => true %></span>
-            <span id="r4answer"><%= i.submit "Play", :class => "button answersubmitbutton" %>
-            </span>
-          </div>
-        <% end %>
-      </div>
-      <div id="r4answered">
-        <% if @currentgamedata.r4answer == nil %>
-          Your acro: No acro yet...
-        <% else %>
-          Your acro: "<%= @currentgamedata.r4answer %>"
-        <% end %>
-      </div>
-      <%= render "shared/gamead" %>
-    </div>
-    Time left to play: <%= @timeremaining %>.<br>
-    # of players: <%= @game.playercount %>/12
-  </div>
+  <% if @game.length == "1hour" %>
+    <%= render "roundplayshort" %>
+  <% elsif @game.length == "6hour" %>
+    <%= render "roundplaylong" %>
+  <% end %>
 <% end %>
 
 <!-- //////////////// GAME VOTING ROUND //////////////////// -->
-<% if @game.playendtime < DateTime.now.utc && DateTime.now.utc < @game.voteendtime %>
+<% if @game.playendtime <= DateTime.now.utc && DateTime.now.utc <= @game.voteendtime %>
   <% if @game.playercount < 3 %>
     Sorry, there weren't enough players to continue to the voting round
   <% else %>
-    <div id="voterounds">
-      <div class="voteroundbutton">
-        <%= button_tag "Round 1 Voting", :id => "r1votebutton" %>
-        <%= button_tag "Round 2 Voting", :id => "r2votebutton" %>
-        <%= button_tag "Round 3 Voting", :id => "r3votebutton" %>
-        <%= button_tag "Round 4 Voting", :id => "r4votebutton" %>
-      </div>
-
-      <div class="votearea" id="r1vote">
-        <div class="roundtitle">Round 1</div>
-        (Category: <span class="gamecategories"><%= @game.r1cat %></span>)<br>
-        <% @gameanswers.shuffle.each do |answer| %>
-          <% if answer.r1answer %>
-            <div id="votebutton1div">
-              <%= button_to "Vote", {:controller => "gamedata", :action => "vote", :id => answer.id, :method => "post", :round => "round1", :game_id => @game.id, :r1voted => true}, :class => "votebuttons", :style => "position:relative;", remote: true %>
-            </div>
-            "<%= Obscenity.replacement(:stars).sanitize(answer.r1answer) %>"
-          <% end %>
-          <br>
-        <% end %><br>
-        <% if @gamedata.r1answer %>
-          Your acro: "<%= Obscenity.replacement(:stars).sanitize(@gamedata.r1answer) %>"
-        <% else %>
-          You didn't enter an acro this round.
-        <% end %>
-        <div class="answervotedfor" id="r1votedfor">
-          <% if @currentgamedata.r1votedfor == nil %>
-            Your vote: You haven't voted yet...
-          <% else %>
-            Your vote: "<%= Gamedata.where(:id => @currentgamedata.r1votedfor).first.r1answer %>"
-          <% end %>
-        </div>
-      </div>
-
-      <div class="votearea" id="r2vote">
-        <div class="roundtitle">Round 2</div>
-        (Category: <span class="gamecategories"><%= @game.r2cat %></span>)<br>
-        <% @gameanswers.shuffle.each do |answer| %>
-          <% if answer.r2answer %>
-            <div id="votebutton2div">
-            <%= button_to "Vote", {:controller => "gamedata", :action => "vote", :id => answer.id, :method => "post", :round => "round2", :game_id => @game.id, :r2voted => true}, :class => "votebuttons", :style => "position:relative;", remote: true %>
-            </div>
-            "<%= Obscenity.replacement(:stars).sanitize(answer.r2answer) %>"
-          <% end %>
-          <br>
-        <% end %><br>
-        <% if @gamedata.r2answer %>
-          Your acro: "<%= Obscenity.replacement(:stars).sanitize(@gamedata.r2answer) %>"
-        <% else %>
-          You didn't enter an acro this round.
-        <% end %>
-        <div class="answervotedfor" id="r2votedfor">
-          <% if @currentgamedata.r2votedfor == nil %>
-            Your vote: You haven't voted yet...
-          <% else %>
-            Your vote: "<%= Gamedata.where(:id => @currentgamedata.r2votedfor).first.r2answer %>"
-          <% end %>
-        </div>
-      </div>
-
-      <div class="votearea" id="r3vote">
-        <div class="roundtitle">Round 3</div>
-        (Category: <span class="gamecategories"><%= @game.r3cat %></span>)<br>
-        <% @gameanswers.shuffle.each do |answer| %>
-          <% if answer.r3answer %>
-            <div id="votebutton3div">
-            <%= button_to "Vote", {:controller => "gamedata", :action => "vote", :id => answer.id, :method => "post", :round => "round3", :game_id => @game.id, :r3voted => true}, :class => "votebuttons", :style => "position:relative;", remote: true %>
-            </div>
-            "<%= Obscenity.replacement(:stars).sanitize(answer.r3answer) %>"
-          <% end %>
-          <br>
-        <% end %><br>
-        <% if @gamedata.r3answer %>
-          Your acro: "<%= Obscenity.replacement(:stars).sanitize(@gamedata.r3answer) %>"
-        <% else %>
-          You didn't enter an acro this round.
-        <% end %>
-        <div class="answervotedfor" id="r3votedfor">
-          <% if @currentgamedata.r3votedfor == nil %>
-            Your vote: You haven't voted yet...
-          <% else %>
-            Your vote: "<%= Gamedata.where(:id => @currentgamedata.r3votedfor).first.r3answer %>"
-          <% end %>
-        </div>
-      </div>
-
-      <div class="votearea" id="r4vote">
-        <div class="roundtitle">Round 4</div>
-        (Category: <span class="gamecategories"><%= @game.r3cat %></span>)<br>
-        <% @gameanswers.shuffle.each do |answer| %>
-          <% if answer.r4answer %>
-            <div id="votebutton4div">
-            <%= button_to "Vote", {:controller => "gamedata", :action => "vote", :id => answer.id, :method => "post", :round => "round4", :game_id => @game.id, :r4voted => true}, :class => "votebuttons", :style => "position:relative;", remote: true %>
-            </div>
-            "<%= Obscenity.replacement(:stars).sanitize(answer.r4answer) %>"
-          <% end %>
-          <br>
-        <% end %><br>
-        <% if @gamedata.r4answer %>
-          Your acro: "<%= Obscenity.replacement(:stars).sanitize(@gamedata.r4answer) %>"
-        <% else %>
-          You didn't enter an acro this round.
-        <% end %>
-        <div class="answervotedfor" id="r4votedfor">
-          <% if @currentgamedata.r4votedfor == nil %>
-            Your vote: You haven't voted yet...
-          <% else %>
-            Your vote: "<%= Gamedata.where(:id => @currentgamedata.r4votedfor).first.r4answer %>"
-          <% end %>
-        </div>
-      </div>
-
-    </div>
+    <% if @game.length == "1hour" %>
+      <%= render "roundvoteshort" %>
+    <% elsif @game.length == "6hour" %>
+      <%= render "roundvotelong" %>
+    <% end %>
   <% end %>
 <% end %>
 
