--- a/app/assets/stylesheets/size-largest.css
+++ b/app/assets/stylesheets/size-largest.css
@@ -222,6 +222,10 @@
     width: 300px;
     margin: 0 auto;
   }
+  .playlongroundbutton {
+    width: 340px;
+    margin: 0 auto;
+  }
   .roundtitle {
     text-decoration: underline;
     font-size: 190%;
@@ -244,7 +248,7 @@
     border-style: solid;
     border-color: gray;
   }
-  #r2play, #r3play, #r4play {
+  #r2play, #r3play, #r4play, #r5play, #r6play, #r7play, #r8play {
     display: none;
   }
   .button.answersubmitbutton {
@@ -262,7 +266,7 @@
     margin: 0 auto;
     text-align: center;
   }
-  #r2vote, #r3vote, #r4vote {
+  #r2vote, #r3vote, #r4vote, #r5vote, #r6vote, #r7vote, #r8vote {
     display: none;
   }
   .voteroundbutton {
