--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -8,7 +8,7 @@
     <%= f.hidden_field :group_id, :value => 0 %>
 
     <div class="actions">
-      <%= f.submit "Play Quick Game (1 hour)", :class => "button" %>
+      <%= f.submit "Play Short Game", :class => "button" %>
     </div>
   <% end %>
 
@@ -18,19 +18,10 @@
     <%= g.hidden_field :group_id, :value => 0 %>
 
     <div class="actions">
-      <%= g.submit "Play Medium Game (6 hours)", :class => "button" %>
+      <%= g.submit "Play Long Game", :class => "button" %>
     </div>
   <% end %>
 
-  <%= form_for(@game) do |h| %>
-
-    <%= h.hidden_field :length, :value => "1day" %>
-    <%= h.hidden_field :group_id, :value => 0 %>
-
-    <div class="actions">
-      <%= h.submit "Play Long Game (1 day)", :class => "button" %>
-    </div>
-  <% end %>
 </div>
 
 <%= render "shared/bottombar" %>
