--- a/app/assets/stylesheets/size-largest.css
+++ b/app/assets/stylesheets/size-largest.css
@@ -243,6 +243,7 @@
     color: red;
   }
   .playarea {
+    padding-bottom: 6px;
     background-color: white;
     border-size: 2px;
     border-style: solid;
