--- a/app/assets/javascripts/page/playgame.js.erb
+++ b/app/assets/javascripts/page/playgame.js.erb
@@ -1,5 +1,6 @@
 // upon room entry
 $(".answerfield").val("");
+$(".ads").append($("#gamead"));
 
 $("#r1playbutton").click(function () {
   $("#r1play").show();
